# Manager_Books

./: .gitignore  config.ini  logging_config.json  main.py  pyproject.toml  start_debug.bat  start_desctop.bat  start_web.bat
UI/: Router.py
UI/get_element/: button.py  text_field.py
UI/views/: BaseView.py
UI/views/view_admin/: admin.py
UI/views/view_admin/tab_cont/: Users_tab.py  add_book.py
UI/views/view_books/: book_cont.py  books.py  cont_book.py
UI/views/view_login/: login.py
UI/views/view_read/: read.py
core/: Auth.py  BooksLogic.py  ChaptersLogic.py  MessageLevel.py  UsersLogic.py  config.py  logging_setup.py  state.py
core/Http_Client/: base.py  client.py  errors.py  websocket_client.py
core/Http_Client/schemas/: base_metod.py  books.py  chapter.py  users.py
core/Logic/: ApiLogic.py  Auth.py  BooksLogic.py  ChaptersLogic.py  UsersLogic.py
core/epub/: models.py  reader.py
core/users/: models.py
tests/core/: test_auth_logging.py  test_logging_setup.py  test_websocket_logging.py
tests/core/epub/: test_epub_reader.py  test_epub_reader_fallbacks.py
