[tool.poetry]
name = "manager-books"
version = "0.1.0"
description = ""
authors = ["Melkor <Melkor@DESKTOP-2F8FHNT>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
httpx = "^0.28.1"
pydantic = {extras = ["email"], version = "^2.12.5"}
ebooklib = "^0.20"
bs4 = "^0.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-asyncio (>=1.3.0,<2.0.0)",
]
